third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda_param.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::LambdaParam {
    public fun inline_apply(f: |u64|u64,b: u64): u64 {
        (f)(b)
    }
    public fun inline_apply2(f: |u64|u64,b: u64): u64 {
        LambdaParam::inline_apply(f, b)
    }
    public fun inline_apply3(f: |u64|u64,b: u64): u64 {
        LambdaParam::inline_apply4(f, b)
    }
    public fun inline_apply4(_f: |u64|u64,b: u64): u64 {
        b
    }
    private fun test_lambda_symbol_param1() {
        {
          let a: u64 = LambdaParam::inline_apply2(closure#0LambdaParam::test_lambda_symbol_param1$lambda$1(), 3);
          if Eq<u64>(a, 3) {
            Tuple()
          } else {
            Abort(0)
          };
          Tuple()
        }
    }
    private fun test_lambda_symbol_param2() {
        {
          let a: u64 = LambdaParam::inline_apply2(closure#0LambdaParam::test_lambda_symbol_param2$lambda$1(), 3);
          if Eq<u64>(a, 3) {
            Tuple()
          } else {
            Abort(0)
          };
          {
            let b: u64 = LambdaParam::inline_apply(closure#0LambdaParam::test_lambda_symbol_param2$lambda$2(), 3);
            if Eq<u64>(b, 3) {
              Tuple()
            } else {
              Abort(0)
            };
            {
              let b: u64 = LambdaParam::inline_apply3(closure#0LambdaParam::test_lambda_symbol_param2$lambda$3(), 3);
              if Eq<u64>(b, 3) {
                Tuple()
              } else {
                Abort(0)
              };
              Tuple()
            }
          }
        }
    }
    private fun test_lambda_symbol_param1$lambda$1(x: u64): u64 {
        x
    }
    private fun test_lambda_symbol_param2$lambda$1(x: u64): u64 {
        x
    }
    private fun test_lambda_symbol_param2$lambda$2(x: u64): u64 {
        x
    }
    private fun test_lambda_symbol_param2$lambda$3(x: u64): u64 {
        x
    }
} // end 0x42::LambdaParam

// -- Sourcified model before bytecode pipeline
module 0x42::LambdaParam {
    public fun inline_apply(f: |u64|u64, b: u64): u64 {
        f(b)
    }
    public fun inline_apply2(f: |u64|u64, b: u64): u64 {
        inline_apply(f, b)
    }
    public fun inline_apply3(f: |u64|u64, b: u64): u64 {
        inline_apply4(f, b)
    }
    public fun inline_apply4(_f: |u64|u64, b: u64): u64 {
        b
    }
    fun test_lambda_symbol_param1() {
        let a = inline_apply2(|arg0| test_lambda_symbol_param1$lambda$1(arg0), 3);
        if (a == 3) () else abort 0;
    }
    fun test_lambda_symbol_param2() {
        let a = inline_apply2(|arg0| test_lambda_symbol_param2$lambda$1(arg0), 3);
        if (a == 3) () else abort 0;
        let b = inline_apply(|arg0| test_lambda_symbol_param2$lambda$2(arg0), 3);
        if (b == 3) () else abort 0;
        let b = inline_apply3(|arg0| test_lambda_symbol_param2$lambda$3(arg0), 3);
        if (b == 3) () else abort 0;
    }
    fun test_lambda_symbol_param1$lambda$1(x: u64): u64 {
        x
    }
    fun test_lambda_symbol_param2$lambda$1(x: u64): u64 {
        x
    }
    fun test_lambda_symbol_param2$lambda$2(x: u64): u64 {
        x
    }
    fun test_lambda_symbol_param2$lambda$3(x: u64): u64 {
        x
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/lambda_param.move:3:2
  │
3 │     f(b)
  │     ^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/lambda_param.move:19:24
   │
19 │     let a = inline_apply2(|x| x, 3);
   │                           ^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/lambda_param.move:24:24
   │
24 │     let a = inline_apply2(|x| x, 3);
   │                           ^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/lambda_param.move:26:23
   │
26 │     let b = inline_apply(|x| x, 3);
   │                          ^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/lambda_param.move:28:24
   │
28 │     let b = inline_apply3(|x| x, 3);
   │                           ^^^^^
